Closed Bug 37643 Opened 25 years ago Closed 25 years ago

pref window won't come up, get infinite "Inefficient XUL" warnings

Categories

(SeaMonkey :: Preferences, defect, P3)

x86
Windows NT
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: sspitzer, Assigned: karnaze)

References

Details

this is with a fresh tree, and with the :table-outer modifications that karnaze suggested to npm.builds.
adding alecf.
I beleive I saw these errors before bengoodgers chrome checkins on 4/30, but not in a 4/29 cvs build
Locks up in Win98SE, only way out is END TASK
Fixed
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
adding morse to the cc list, so he'll know this is fixed.
*** Bug 37663 has been marked as a duplicate of this bug. ***
no longer see this. vrfy.
Status: RESOLVED → VERIFIED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.