Fix for Linux bustage, bug 37643. Give outer table reflow state initial computed values of 0 to avoid excessive reflows from boxes.